feat(user): added description and global guest user mute
